fix contact page alignment, theme

--- a/css/signin.css
+++ b/css/signin.css
@@ -5,8 +5,8 @@ body {
 
 body {
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .form-signin {
